design: Fix missing TODO

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -942,7 +942,7 @@ Initialisiert eine erfolgreiche Unifikation mit einer Liste lösender Substituti
 \begin{itemize}[noitemsep]
 	\item[-] \texttt{lhs}: Linker zu unifizierender Term
 	\item[-] \texttt{rhs}: Rechter zu unifizierender Term
-	\item[-] \texttt{UnificationResult}: TODO
+	\item[-] \texttt{UnificationResult}: Fehlgeschlagene Unifikation
 \end{itemize}
 Initialisiert eine fehlgeschlagene Unifikation mit zwei Termen, die nicht unifiziert werden konnten.
 
