design: Rename Interpreter to InterpreterManager in controller package

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -1723,7 +1723,7 @@ Kommando zum Parsen des Editor-Inhalts. Der Editor-Inhalt wird hierbei durch das
 	\item[-] \texttt{visualisation}: Schnittstelle der Visualisierung
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf einen Prolog-Parser und auf die Schnittstellen des Editors, der Konsole und der Visualisierung.
+Initialisiert das Kommando mit Referenzen auf einen Prolog-Parser, einen InterpreterManager und auf die Schnittstellen des Editors, der Konsole und der Visualisierung.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1739,7 +1739,7 @@ Kommando zum Ausführen eines Interpreter-Schritts. Ausgaben beim Finden einer L
 	\item[-] \texttt{visualisation}: Schnittstelle der Visualisierung
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf einen Prolog-Interpreter sowie auf die Schnittstellen der Konsole sowie der Visualisierung.
+Initialisiert das Kommando mit Referenzen auf einen InterpreterManager sowie auf die Schnittstellen der Konsole sowie der Visualisierung.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1755,7 +1755,7 @@ Kommando zum Rückgängig-machen eines Interpreter-Schritts. Ausgaben beim Finde
 	\item[-] \texttt{visualisation}: Schnittstelle der Visualisierung
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf einen Prolog-Interpreter sowie auf die Schnittstellen der Konsole sowie der Visualisierung.
+Initialisiert das Kommando mit Referenzen auf einen InterpreterManager sowie auf die Schnittstellen der Konsole sowie der Visualisierung.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1772,7 +1772,7 @@ Kommando zum Ausführen von Interpreter-Schritten bis zum Finden der nächsten L
     \item[-] \texttt{running}: Zustandsvariable, die aussagt, ob der Interpreter läuft
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf einen Prolog-Interpreter sowie auf die Schnittstellen der Konsole sowie der Visualisierung.
+Initialisiert das Kommando mit Referenzen auf einen InterpreterManager sowie auf die Schnittstellen der Konsole sowie der Visualisierung.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1787,7 +1787,7 @@ Kommando zum Abbrechen des Interpreters beim Suchen der nächsten Lösung.
     \item[-] \texttt{running}: Zustandsvariable, die aussagt, ob der Interpreter läuft
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit einer Referenz auf einen Prolog-Interpreter.
+Initialisiert das Kommando mit einer Referenz auf einen InterpreterManager.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1832,9 +1832,10 @@ Kommando zum Setzen einer anderen Sprache für die grafische Oberfläche. Die Ko
 \begin{itemize}[noitemsep]
 	\item[-] \texttt{console}: Schnittstelle der Konsole
 	\item[-] \texttt{visualisation}: Schnittstelle der Visualisierung
+        \item[-] \texttt{lang}: Zu setzende Sprache
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf die Schnittstellen der Visualisierung und der Konsole sowie der zu setzenden Sprache.
+Initialisiert das Kommando mit Referenzen auf die Schnittstellen der Visualisierung, der Konsole, die zu setzende Sprache und einen InterpreterManager.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1865,7 +1866,7 @@ Kommando zum Exportieren der Visualisierung als TikZ-Quelltext. Fehler oder Hinw
 	\item[-] \texttt{visualisation}: Schnittstelle der Visualisierung
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf die Schnittstellen der Visualisierung und der Konsole.
+Initialisiert das Kommando mit Referenzen auf die Schnittstellen der Visualisierung, der Konsole und einen InterpreterManager.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
@@ -1882,7 +1883,7 @@ Kommando zum Exportieren der Visualisierung als Bild-Datei (PNG oder SVG). Der D
 	\item[-] \texttt{format}: Format der Bild-Datei
 	\item[-] \texttt{interpreterManager}: InterpreterManager mit Referenz auf den aktuellen Interpreter
 \end{itemize}
-Initialisiert das Kommando mit Referenzen auf die Schnittstellen der Visualisierung und der Konsole sowie dem gewollten Bild-Format.
+Initialisiert das Kommando mit Referenzen auf die Schnittstellen der Visualisierung und der Konsole sowie dem gewollten Bild-Format und einen InterpreterManager.
 
 \textbf{\texttt{public void execute()}}\\
 Führt das beschriebene Kommando aus.
