view: Add menu bar to window
It was necessary to introduce a new class called CheckBoxMenuItem to be
able to use the LanguageManager correctly

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -1,2 +1,22 @@
+menu_file = File
+menu_new = New
+menu_open = Open
 menu_save = Save
-menu_saveas = Save As...
+menu_saveas = Save as...
+menu_recent = Recently opened
+menu_exit = Exit
+
+menu_program = Program
+menu_parse = Parse
+menu_format = Format
+
+menu_export = Export
+menu_export_png = Export PNG
+menu_export_svg = Export SVG
+menu_export_tikz = Export TikZ
+
+menu_settings = Settings
+menu_stdlib = Toggle stdlib
+menu_language = Language
+menu_language_de = German
+menu_language_en = English
