view: Implement ToolBar

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -20,3 +20,11 @@ menu_stdlib = Toggle stdlib
 menu_language = Language
 menu_language_de = German
 menu_language_en = English
+
+tooltip_new = Create new file
+tooltip_open = Open file
+tooltip_save = Save file
+tooltip_parse = Parse program
+tooltip_format = Format program
+tooltip_step = Next step
+tooltip_next = Next solution
