view: Change 'toggle stdlib' menu texts

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -16,7 +16,7 @@ menu_export_svg = Export SVG
 menu_export_tikz = Export TikZ
 
 menu_settings = Settings
-menu_stdlib = Toggle stdlib
+menu_stdlib = Enable standard library
 menu_language = Language
 menu_language_de = German
 menu_language_en = English
