view: Implement input field

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -28,3 +28,5 @@ tooltip_parse = Parse program
 tooltip_format = Format program
 tooltip_step = Next step
 tooltip_next = Next solution
+
+button_send = Send
