controller: Add missing translations

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -28,3 +28,28 @@ tooltip_parse = Parse program
 tooltip_format = Format program
 tooltip_step = Next step
 tooltip_next = Next solution
+
+yes = Yes
+no = No
+cancel = Cancel
+
+confirm_new = Unsaved changes detected. Save changes?
+confirm_new_title = New
+
+png_files = PNG-files (.png)
+svg_files = SVG-files (.svg)
+tikz_files = TikZ-Files (.tikz)
+prolog_files = Prolog-Files (.pl)
+
+open_file_success = Successfully opened file
+save_file_success = Successfully saved file
+export_file_success = Successfully exported file
+editor_formatted = Successfully formatted source code
+
+open_file_error = Error opening file
+save_file_error = Error saving file
+export_file_error = Error exporting file
+export_unsupported_format = Error exporting file, unsupported format
+parser_error = Error parsing source code
+
+solution_found = Found solution
