controller: Fix parsing output

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -50,6 +50,8 @@ open_file_error = Error opening file
 save_file_error = Error saving file
 export_file_error = Error exporting file
 export_unsupported_format = Error exporting file, unsupported format
+
+parser_success = Successfully parsed source code
 parser_error = Error parsing source code
 
 solution_found = Found solution
