view/controller: Print descriptive error messages
* Add package private method to Lexer to allow getting the last line of
code

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -58,3 +58,12 @@ solution_found = Found solution
 
 button_send = Send
 button_step = Next step
+
+position = after %s in Line %d, Column %d
+illegal_char = Illegal character
+operator_not_recognized = Operator %s not recognized
+expected_instead = Expected %s instead of '%s'
+goal_not_supported = Goal not supported
+term = a term
+functor = functor
+unsupported_lists = Lists not supported
