interpreterman: Move parsing to interpreter manager

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -53,8 +53,12 @@ export_unsupported_format = Error exporting file, unsupported format
 
 parser_success = Successfully parsed source code
 parser_error = Error parsing source code
+parser_query_error = Error parsing query
+
+visualisation_started = Visualisation started.
 
 solution_found = Found solution
+no_more_solutions = No more solutions.
 
 button_send = Send
 button_step = Next step
