view: Show "yes" message when a query without variables has been fulfilled

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -58,6 +58,7 @@ parser_query_error = Error parsing query
 visualisation_started = Visualisation started.
 
 solution_found = Found solution
+solution_yes = yes
 no_more_solutions = No more solutions.
 
 button_send = Send
