view: Translate startup message in console

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -56,6 +56,7 @@ parser_error = Error parsing source code
 parser_query_error = Error parsing query
 
 visualisation_started = Visualisation started.
+viper_started = VIPER %s ready
 
 solution_found = Found solution
 solution_yes = yes
