interpreter: Implement cut
- Also add changes from unification activation record

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -57,6 +57,7 @@ parser_query_error = Error parsing query
 
 visualisation_started = Visualisation started.
 viper_started = VIPER %s ready
+visualisation_cute_note = Backtracking to this subgoal<br />will make %s fail
 
 solution_found = Found solution
 solution_yes = yes
