controller: Give Exit Save Dialog a proper title

--- a/src/main/resources/translations_en.properties
+++ b/src/main/resources/translations_en.properties
@@ -35,6 +35,7 @@ cancel = Cancel
 
 confirm_new = Unsaved changes detected. Save changes?
 confirm_new_title = New
+confirm_close_title = Close
 
 png_files = PNG-files (.png)
 svg_files = SVG-files (.svg)
